// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Blankslate /> Render must match capped() 1`] = `
<div
  className="blankslate blankslate-capped"
>
  <h3>
    This is a blank slate
  </h3>
  <p>
    Use it to provide information when no dynamic content exists.
  </p>
</div>
`;

exports[`<Blankslate /> Render must match cleanBackground() 1`] = `
<div
  className="blankslate blankslate-clean-background"
>
  <h3>
    This is a blank slate
  </h3>
  <p>
    Use it to provide information when no dynamic content exists.
  </p>
</div>
`;

exports[`<Blankslate /> Render must match large() 1`] = `
<div
  className="blankslate blankslate-large"
>
  <h3>
    This is a blank slate
  </h3>
  <p>
    Use it to provide information when no dynamic content exists.
  </p>
</div>
`;

exports[`<Blankslate /> Render must match narrow() 1`] = `
<div
  className="blankslate blankslate-narrow"
>
  <h3>
    This is a blank slate
  </h3>
  <p>
    Use it to provide information when no dynamic content exists.
  </p>
</div>
`;

exports[`<Blankslate /> Render must match regular() 1`] = `
<div
  className="blankslate"
>
  <h3>
    This is a blank slate
  </h3>
  <p>
    Use it to provide information when no dynamic content exists.
  </p>
</div>
`;

exports[`<Blankslate /> Render must match spacious() 1`] = `
<div
  className="blankslate blankslate-spacious"
>
  <h3>
    This is a blank slate
  </h3>
  <p>
    Use it to provide information when no dynamic content exists.
  </p>
</div>
`;
